[gd_scene load_steps=3 format=3 uid="uid://diqnu5h28kgou"]

[ext_resource type="Script" path="res://player/cenas/vida.gd" id="1_mehxh"]
[ext_resource type="Texture2D" uid="uid://bq1xix6kx2h8n" path="res://player/sprites/Vida.png" id="2_ywu32"]

[node name="vida" type="Node2D" groups=["vida"]]
script = ExtResource("1_mehxh")

[node name="ColorRect3" type="ColorRect" parent="." groups=["vida"]]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -34.0
offset_right = 77.0
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 2
color = Color(1, 1, 1, 0.254902)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -32.0
offset_right = 76.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 0.819608)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -31.0
offset_right = 75.0
offset_bottom = 19.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 0.752941)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -22.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 0.752941)

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -11.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 0.752941)

[node name="ColorRect3" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 0.752941)

[node name="ColorRect4" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_top = 11.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 0.752941)

[node name="ColorRect5" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_top = 20.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 0.752941)

[node name="vida1" type="Sprite2D" parent="."]
position = Vector2(-54, -7)
scale = Vector2(0.0975, 0.0975)
texture = ExtResource("2_ywu32")

[node name="vida2" type="Sprite2D" parent="."]
position = Vector2(-3, -7)
scale = Vector2(0.0975, 0.0975)
texture = ExtResource("2_ywu32")

[node name="vida3" type="Sprite2D" parent="."]
position = Vector2(49, -7)
scale = Vector2(0.0975, 0.0975)
texture = ExtResource("2_ywu32")
